made text bigger and fixed vertical align of channel icons

--- a/src/electric-app/src/_channel.display.scss
+++ b/src/electric-app/src/_channel.display.scss
@@ -182,7 +182,7 @@ channel {
 
     @include cellsMixin();
 
-    font-size: 0.8em;
+    font-size: 1.0em;
     // Force a little more spacing where we have it
     ion-grid {
     }
