--- a/src/electric-app/src/app/components/channel/channel.component.scss
+++ b/src/electric-app/src/app/components/channel/channel.component.scss
@@ -1,13 +1,11 @@
 @import "../../../include-media";
 
 :host {
-  #heading {
-    .cellcontainer {
-      ion-icon {
-        vertical-align: text-bottom;
-        position: relative;
-        bottom: 1px;
-      }
+  .cellcontainer {
+    ion-icon {
+      vertical-align: text-bottom;
+      position: relative;
+      bottom: 1px;
     }
   }
 }
